# mquire

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  justfile
.github/: dependabot.yml
.github/actions/mquire-sql-query-verifier/check/: action.yml
.github/actions/mquire/check/: action.yml
.github/actions/mquire/package/: action.yml
.github/actions/mquire/posix-build/: action.yml
.github/actions/mquire/windows-build/: action.yml
.github/workflows/: check.yml  clippy.yml  format.yml  integration_sql-queries_main.yml  integration_sql-queries_runner.yml  main.yml  posix_build.yml  posix_check.yml
examples/: mquire-webui.py
integration-tests/sql-queries/cfg/: linux_examples.json  linux_simple.json  linux_views.json
integration-tests/sql-queries/snapshots/: .gitignore
integration-tests/sql-queries/sql/linux/ubuntu2404_6.14.0-37-generic/examples/: kernel_modules.json  network_connections.json  network_connections.sql  os_version.json  system_info.json  system_info.sql  task_open_files.json  tasks_filtered.json  tasks_filtered.sql  tasks_filtered_pid_ns.sql  tasks_filtered_task_list.sql
integration-tests/sql-queries/sql/linux/ubuntu2404_6.14.0-37-generic/simple/: boot_time.json  boot_time.sql  dmesg.json  kallsyms.json  kallsyms.sql  kernel_modules.json  memory_mappings_count.json  memory_mappings_count.sql  memory_mappings_sample.json  memory_mappings_sample.sql  network_connections.json  network_interfaces.json  network_interfaces.sql  syslog_file.json  task_capabilities.sql  task_open_files_count.json  task_open_files_sample.json  task_ptrace_flags.json  tasks.json  tasks.sql  tasks_count.json  tasks_count.sql  tasks_sample.json  tasks_sample_pid_ns.json  tasks_sample_pid_ns.sql  tasks_sample_task_list.json  tasks_sample_task_list.sql
integration-tests/sql-queries/sql/linux/ubuntu2404_6.14.0-37-generic/views/: ld_env_override_processes.json  ld_env_override_processes.sql  process_anon_wx_regions.json  process_capabilities.json  process_capabilities.sql  process_libraries.json  process_ptrace_flags.json  processes_view.json  processes_view.sql
integration-tests/sql-queries/verifier/: .gitignore  pyproject.toml  test.xml
integration-tests/sql-queries/verifier/src/mquire_sql_query_verifier/: __init__.py  __main__.py  cli.py  comparator.py  config.py  reporter.py  runner.py  s3.py
libmquire/: Cargo.toml
libmquire/src/: lib.rs
libmquire/src/architecture/: mod.rs
libmquire/src/architecture/intel/: architecture.rs  intel_architecture.rs  mod.rs  page_table_entry.rs  table_entry.rs
libmquire/src/core/: architecture.rs  error.rs  mod.rs  operating_system.rs  virtual_memory_reader.rs
libmquire/src/core/entities/: file.rs  mod.rs  network_interface.rs  system_information.rs  system_version.rs
libmquire/src/memory/: error.rs  mod.rs  physical_address.rs  primitives.rs  readable.rs  virtual_address.rs
libmquire/src/operating_system/: mod.rs
libmquire/src/operating_system/linux/: btf.rs  btfparse_readable_adapter.rs  kallsyms.rs  kernel_version.rs  linux_operating_system.rs  list.rs  maple_tree.rs  mod.rs  operating_system.rs  virtual_struct.rs  xarray.rs
libmquire/src/operating_system/linux/entities/: cgroup.rs  dmesg.rs  kallsyms_symbol.rs  memory_mapping.rs  mod.rs  syslog.rs
libmquire/src/operating_system/linux/operating_system/: boot_time.rs  cgroup.rs  dmesg.rs  file.rs  memory_mapping.rs  network_interface.rs  readable_file_linux_object.rs  syslog_file.rs  task.rs  utils.rs
libmquire/src/snapshot/: lime_snapshot.rs  mod.rs  raw_snapshot.rs
libmquire/src/sys/: architecture.rs  error.rs  mod.rs  operating_system.rs  system.rs  virtual_memory_reader.rs
libmquire/src/sys/entities/: file.rs  mod.rs  os_version.rs  system_information.rs  task.rs
libmquire/src/utils/: macros.rs  memory_scanner.rs  mod.rs  readable_file.rs  reader.rs
mq/: Cargo.toml
mq-file-dump/: Cargo.toml
mq-file-dump/src/: logger.rs  main.rs
mq/src/: logger.rs  main.rs
mq/src/database/: mod.rs
mq/src/database/table_plugins/: cgroups.rs  dmesg.rs  kallsyms.rs  log_messages.rs  memory_mappings.rs  mod.rs  network_connections.rs  network_interfaces.rs  os_version.rs  syslog.rs  system_info.rs  task_open_files.rs  tasks.rs
mq/src/sqlite/: database.rs  error.rs  libsqlite3.rs  mod.rs
mquire/: Cargo.toml
mquire/src/: main.rs
mquire/src/table_plugins/: os_version.rs  system_info.rs  task_open_files.rs  tasks.rs
package/: CMakeLists.txt  description.txt
package/scripts/: extract_version.sh
sql/views/: README.md
sql/views/linux/common/: 000_processes.sql  100_process_network_connections.sql  110_process_libraries.sql  120_process_capabilities.sql  130_process_ptrace_flags.sql  200_hidden_process_detection.sql  200_tasklist_pidns_differences.sql  210_process_anon_wx_regions.sql  220_ld_env_override_processes.sql
sqlite/: Cargo.toml  build.rs
sqlite/src/: database.rs  error.rs  lib.rs  table_plugin.rs
src/architecture/intel/: architecture.rs  mod.rs
src/core/: architecture.rs  operating_system.rs
src/core/entities/: file.rs  ip_address.rs  mod.rs  network_connection.rs  network_interface.rs  system_version.rs  task.rs
src/memory/: mod.rs  primitives.rs  readable.rs  virtual_address.rs
src/operating_system/linux/: btf.rs  kallsyms.rs  kernel_version.rs  list.rs  maple_tree.rs  mod.rs  operating_system.rs  pid_ns_iterator.rs  task_struct_iterator.rs  utils.rs  virtual_struct.rs  xarray.rs
src/operating_system/linux/entities/: boot_time.rs  capabilities.rs  file.rs  kernel_module.rs  mod.rs  network_connection.rs  syslog_file.rs  task.rs  task_ptrace_state.rs
src/operating_system/linux/operating_system/: boot_time.rs  cgroup.rs  dmesg.rs  file.rs  kallsyms_symbol.rs  kernel_module.rs  memory_mapping.rs  network_connection.rs  network_interface.rs  readable_file_linux_object.rs  syslog_file.rs  system_information.rs  task.rs  utils.rs
src/snapshot/: elf_core_snapshot.rs  lime_snapshot.rs  mod.rs  raw_snapshot.rs
src/utils/: bit_flags.rs  ip_address.rs  memory_scanner.rs  mod.rs  readable_file.rs  reader.rs  text.rs
(+43 files in other folders)
