#
# Copyright (c) 2025-present, Trail of Bits, Inc.
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

[package]
name = "mquire"
version = "1.2.0"
edition = "2021"
authors = ["Trail of Bits"]
license = "Apache-2.0"
description = "Memory forensics and analysis tool for querying Linux kernel memory dumps using SQL"
repository = "https://github.com/trailofbits/mquire"
documentation = "https://docs.rs/mquire"
readme = "README.md"
keywords = ["linux", "kernel", "memory", "forensics", "sql"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
# Core library dependencies
btfparse = "1.3.7"
log = "0.4.29"
memmap2 = "0.9"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.148"
chrono = { version = "0.4.42", features = ["clock"], default-features = false }
thiserror = "2.0"

# CLI-only dependencies
clap = { version = "4.5", features = ["derive"], optional = true }
rustyline = { version = "17.0.2", default-features = false, optional = true }
rusqlite = { version = "0.38.0", features = ["vtab", "bundled"], optional = true }

[features]
default = ["cli"]
cli = ["clap", "rustyline", "rusqlite"]

[[bin]]
name = "mquire"
required-features = ["cli"]
