#
# Copyright (c) 2025-present, Trail of Bits, Inc.
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

[package]
name = "mq-file-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
libmquire = { path = "../libmquire" }
log = "0.4.27"
