#
# Copyright (c) 2025-present, Trail of Bits, Inc.
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

[package]
name = "mquire"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mq"
path = "src/main.rs"

[dependencies]
"libmquire" = { path = "../libmquire" }
"sqlite" = { path = "../sqlite" }
