#
# Copyright (c) 2025-present, Trail of Bits, Inc.
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0.83"
bindgen = "0.69.1"
